/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package requestreceiver;

import "trantorpb/trantorpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/requestreceiver";

service RequestReceiver {
  rpc Listen(stream trantorpb.Transaction) returns(ByeBye);
}

message ByeBye {
}
